force-app/main/default/objects/Account_Address__c/Account_Address__c.object-meta.xml
<CustomObject>
    <label>Account_Address</label>
    <nameField>
        <label>Account_Address Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>