force-app/main/default/objects/Account_Address__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact_Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account_Address</relationshipLabel>
    <relationshipName>Account_Address</relationshipName>
    <type>Lookup</type>
</CustomField>