force-app/main/default/objects/Account_Address__c/fields/Detail_Address__c.field-meta.xml
<CustomField>
    <fullName>Detail_Address__c</fullName>
    <label>Detail_Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>