force-app/main/default/objects/Account_Address__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <label>Full_Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>